--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
 
-    <title>Responsive Wireframe Website Build</title>
+    <title>DE-ECO</title>
   </head>
   <body>
     <div id="root"></div>
